--- a/app/views/shared/_toggle.html.slim
+++ b/app/views/shared/_toggle.html.slim
@@ -5,7 +5,8 @@
   .element.mid
     .toggle-button
       .ball
-        = image_tag "logo-footer.svg"
+        .ball-logo
+        = image_tag "logo-footer-blue.svg"
   .element.right.sides
     .title. FOR COLLECTORS
     hr.line.w-100.no-margin
