--- a/app/views/shared/_newsletter_signup.html.slim
+++ b/app/views/shared/_newsletter_signup.html.slim
@@ -5,7 +5,7 @@
         h4.title.color.c-blue. STAY WITH ARTYQUE
       .title.color.c-white.text-center.col-12
         h4.header-text.color.mt-3.c-blue.coachella-bold. Subscribe to our newsletter
-      = form_with(url: contact_forms_subscribe_path, method: :post, class: "newsletter-form mt-2") do
+      = form_with(url: contact_forms_subscribe_path, method: :post, class: "newsletter-form mt-2", style: "translateX(23px)") do
         = email_field_tag :email
-        = submit_tag 'Sign up', class: "button-primary submit-button"
+        = submit_tag 'Sign up', class: "button-primary submit-button", style: "transform: translateX(-23px)"
 
