--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,14 +2,8 @@
   <div class="wrapper-hidden">
     <div class="top-right-circle"></div>
     <!-- <div class="bot-left-circle"></div> -->
-    <div class="line-wrapper w-100">
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="title color c-white ml-13perc">ABOUT US</h4>
-        <hr class="lines w-70">
-      </div>
-    </div>
-    <div class="fake-container">
-      <div class="about-text">
+    <div class="fake-container mt-5">
+      <div class="about-text text-center pt-5">
         <p>
           ARTYQUE is a hybrid model between a gallery and a talent agency dedicated to the career growth of emerging and mid-career artists across Europe.
         </p>
@@ -26,6 +20,7 @@
     </div>
   </div>
   <div class="circle-banner-container circle-left">
+    <%= link_to '', services_path, class: "fill-link" %>
     <div class="circle about-circle banner-circle bg-blue c-white rotating">
       <p class="title"><strong>·</strong>ARTYQUE FOR<strong>·</strong> COLLECTORS</p>
     </div>
