--- a/app/views/shared/_who_is_artyque.html.slim
+++ b/app/views/shared/_who_is_artyque.html.slim
@@ -1,5 +1,9 @@
 .new-look-banner.who-is-artyque.bg-white.height-fit
   .line-wrapper.w-100.ml-7perc.mb-2
+    .circle-banner-container[style="transform: translateY(25%)"]
+      = link_to '', artists_path, class: "fill-link"
+      .circle.banner-circle.white.c-dark-blue.rotating
+        p.title[style="letter: 100%;"] <strong>·</strong>&nbsp;&nbsp; AVAILABLE <strong>·</strong>&nbsp;&nbsp; ART WORKS
     .d-flex.justify-content-between.align-items-center.title
       h4.title Who is Artyque
       HR.lines.w-70
