center image of them

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -166,7 +166,7 @@
     height: auto;
     width: 100%;
     background-size: cover;
-    background-position: 75% 50%; // TODO adjust if image changes
+    background-position: 50% 50%;
     min-height: 570px;
     flex-direction: column;
     margin-bottom: 100px;
