--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -2,16 +2,10 @@
   <div class="wrapper-hidden">
     <div class="top-right-circle"></div>
     <!-- <div class="bot-left-circle"></div> -->
-    <div class="line-wrapper w-100">
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="title color c-white ml-13perc">OUR SERVICES</h4>
-        <hr class="lines w-70">
-      </div>
-    </div>
-    <div class="fake-container">
-      <div class="about-text">
+    <div class="fake-container mt-5">
+      <div class="about-text pt-5">
         <p>
-          <strong>Collecting art is complicated</strong>, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
+          Collecting art is complicated, we get it. The works of established artists are high priced and the ones of emerging artists are riskier to collect.
         </p>
         <br>
         <p>
@@ -27,8 +21,9 @@
     </div>
   </div>
   <div class="circle-banner-container circle-left">
+    <%= link_to '', artists_path, class: "fill-link" %>
     <div class="circle about-circle banner-circle bg-blue c-white rotating">
-      <p class="title"><strong>·</strong> ARTYQUE FOR <strong>·</strong> COLLECTORS</p>
+      <p class="title"><strong>·</strong>&nbsp;&nbsp; AVAILABLE <strong>·</strong>&nbsp;&nbsp; ART WORKS
     </div>
   </div>
 </div>
