more services update

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -205,6 +205,9 @@
 .service-card{
   max-width: 280px;
   margin: 11px;
+  p {
+    font-size: 14px;
+  }
   .image{
     height: 228px;
     background-position: center;
