--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -20,6 +20,7 @@
                     li. Create a strategy for your career growth
                     li. Help you to participate in curatorial projects
                     li. Increase the visibility of your art on the international art scene Manage your relations with the press
+                    li. Manage your relations with the press
               .col-12.col-md-6.mt-5
                 .service.get.position-relative.pt-5
                   h3.coachella-regular.to-corner What you get
@@ -28,7 +29,8 @@
                     li. What it means to you:
                     li. More time to create
                     li. Less stress about applications and negotiations with exhibition spaces
-                    li. Participation in exhibitions Growing pool of collectors
+                    li. Participation in exhibitions
+                    li. Growing pool of collectors
 
 
         .new-look-banner.secondary-banner
@@ -52,8 +54,8 @@
       .modal-body
         .text-body
           .body-title
-            h3.coachella-regular.text-center.mb-5 ARTYQUE for artists
-          p.coachella-light.mb-5 ARTYQUE is a new kind of agency dedicated to the career growth of emerging and mid-career artists across Europe. Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your provenance, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally.
+            h3.coachella-regular.text-center.mb-5 ARTYQUE for Collectors
+          p.coachella-light.mb-5 With ARTYQUE, we want to provide you with a new and easy way of building your collection, whether you are an art lover or an experienced collector. We bring to you an innovative way to invest in art, through which you don’t only purchase works that inspire you, but also directly support the rise of your favourite artists and as a result, of your collection’s value. By doing so, you will take part in setting new trends you truly believe in and become a tastemaker in the emerging art world.
           .services.mb-5.justify-content-center
             .row
               .col-12.col-md-6.mt-5
@@ -61,20 +63,18 @@
                   h3.coachella-regular.to-corner What we offer
                   br
                   ul
-                    li. Create a strategy for your career growth
-                    li. Help you to participate in curatorial projects
-                    li. Increase the visibility of your art on the international art scene Manage your relations with the press
+                    li Introduce you to the next generation of promising artists.
+                    li Provide a support team and structure behind each of our artists’ career.
+                    li Increase the visibility of artworks you have collected with Artyque on the international art scene.
               .col-12.col-md-6.mt-5
                 .service.get.position-relative.pt-5
                   h3.coachella-regular.to-corner What you get
                   br
                   ul
-                    li. What it means to you:
-                    li. More time to create
-                    li. Less stress about applications and negotiations with exhibition spaces
-                    li. Participation in exhibitions Growing pool of collectors
-
-
+                    li A safer way to invest in art.
+                    li A stronger provenance for the works you collect with ARTYQUE
+                    li Participation in exhibitions
+                    li The value growth of your collection
         .new-look-banner.secondary-banner
           .banner-content
             .row
@@ -96,8 +96,8 @@
       .modal-body
         .text-body
           .body-title
-            h3.coachella-regular.text-center.mb-5 ARTYQUE for artists
-          p.coachella-light.mb-5 ARTYQUE is a new kind of agency dedicated to the career growth of emerging and mid-career artists across Europe. Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your provenance, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally.
+            h3.coachella-regular.text-center.mb-5 ARTYQUE for Exhibitions Spaces
+          p.coachella-light.mb-5 By working with ARTYQUE, you get access to our artists, together with a curatorial service and an International PR support. Our model is based on partnerships, openness and transparency, we are eager to provide our artists with new opportunities such as exhibitions, brand collaborations, public projects, private events and more. 
           .services.mb-5.justify-content-center
             .row
               .col-12.col-md-6.mt-5
@@ -105,9 +105,10 @@
                   h3.coachella-regular.to-corner What we offer
                   br
                   ul
-                    li. Create a strategy for your career growth
-                    li. Help you to participate in curatorial projects
-                    li. Increase the visibility of your art on the international art scene Manage your relations with the press
+                    li Promising artists with a pool of dedicated collectors.
+                    li In-house curator
+                    li Logistic discounts
+                    li Promotion of the project through our network
               .col-12.col-md-6.mt-5
                 .service.get.position-relative.pt-5
                   h3.coachella-regular.to-corner What you get
