--- a/app/views/artists/_header.html.slim
+++ b/app/views/artists/_header.html.slim
@@ -59,6 +59,7 @@
     = render 'shared/photo_uploader', f: f, field: :transparent_photo, show_label: true, original_photo: @artist.transparent_photo
     = f.input :super_title
     = f.input :name
+    = f.input :category
     = f.input :title
     = f.input :description
     = f.input :button_text
