--- a/app/views/shared/_toggle.html.slim
+++ b/app/views/shared/_toggle.html.slim
@@ -6,7 +6,7 @@
     .toggle-button
       .ball
         .ball-logo
-        = image_tag "logo-footer-blue.svg"
+        = image_tag "logo-footer-blue.png"
   .element.right.sides
     .title. FOR COLLECTORS
     hr.line.w-100.no-margin
