--- a/app/views/pages/home/_png_card.html.slim
+++ b/app/views/pages/home/_png_card.html.slim
@@ -2,7 +2,8 @@
   .artist-image-png
     = cl_image_tag artist.transparent_photo
   = link_to '', artist_path(artist), class: "link-0-0"
-  p.title.f-9.mt-2. Painting
+  p.title.f-9.mt-2
+    = artist.category || artist.super_title
   .artist-full-name
     p.coachella-regular. #{first_name}
     p.coachella-regular. #{last_name}
