--- a/app/views/shared/_featured_stories.html.slim
+++ b/app/views/shared/_featured_stories.html.slim
@@ -1,14 +1,14 @@
 .line-wrapper
-	.container
-		.row
-			div.col.d-flex.line-left
-				h4.title Recent News
-				hr.lines.w-75
+  .container
+    .row
+      div.col.d-flex.line-left
+        h4.title Recent News
+        hr.lines.w-75
 .container.mb-3
-	.row
+  .row
     - @news_posts.each do |news_post|
       .col-12.col-sm-6.p-2.mb-2
         = render 'news_posts/card', news_post: news_post
-  / .row
-  /   .col-12.text-center
-  /     = link_to "See All Articles", news_posts_path, class: "button-primary"
+  .row
+    .col-12.text-center
+      = link_to "See All Articles", news_posts_path, class: "button-primary"
