--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -6,7 +6,7 @@
       hr.lines.w-75
   .fake-container.mb-5
     .row.justify-content-between.artists-cards.justify-center-mobile
-      .artist-card.col-lg-2.bg-beige.top-artist-button.d-none.d-sm-block
+      .artist-card.col-lg-2.bg-gold.top-artist-button.d-none.d-sm-block
         = link_to '', artists_path, class: "link-0-0"
         .left
           p.coachella-regular Discover
@@ -15,7 +15,7 @@
         - last_name = artist.name.split(' ').last
         - first_name = artist.name.split(' ')[0..-2].join(' ')
         = artist.transparent_photo.present? ? (render 'pages/home/png_card', artist: artist, first_name: first_name, last_name: last_name) : render('pages/home/not_png_card', artist: artist, first_name: first_name, last_name: last_name)
-      .artist-card.col-lg-2.bg-beige.top-artist-button.d-none.d-sm-block
+      .artist-card.col-lg-2.bg-gold.top-artist-button.d-none.d-sm-block
         = link_to '', '#', class: "link-0-0"
         .right
           p.coachella-regular Available
