--- a/app/views/shared/_our_services.html.slim
+++ b/app/views/shared/_our_services.html.slim
@@ -11,21 +11,21 @@
           .text-title
             p.coachella-regular For
             p.coachella-regular.to-underline Artists
-        p.text-left.c-gray Our mission is to help highly promising artists to exhibit their art across Europe, gain international recognition and in the process, increase their artistic value.
+        p.text-left Our mission is to help highly promising artists to exhibit their art across Europe, gain international recognition and in the process, increase their artistic value.
       .service-card.col-12.col-md-4.mb-5
         .image.bg-pink.mb-3.position-relative
           button type="button" class="btn btn-primary link-0-0" data-toggle="modal" data-target="#modal_collectors"
           .text-title
             p.coachella-regular For
             p.coachella-regular.to-underline Collectors
-        p.text-left.c-gray Put a strategy behind collecting art. With ARTYQUE, go beyond collecting, commissioning and giving patronage, and make a real impact on the future of your collection.
+        p.text-left Put a strategy behind collecting art. With ARTYQUE, go beyond collecting, commissioning and giving patronage, and make a real impact on the future of your collection.
       .service-card.col-12.col-md-4.mb-5
         .image.bg-beige.mb-3.position-relative
           button type="button" class="btn btn-primary link-0-0" data-toggle="modal" data-target="#modal_galleries"
           .text-title
             p.coachella-regular For
             p.coachella-regular.to-underline Exhibitions Spaces
-        p.text-left.c-gray Teaming up doubles success. By working together, we can aim higher and reach better results. We are open for collaboration with all kinds of art, cultural and project spaces in Europe.
+        p.text-left Teaming up doubles success. By working together, we can aim higher and reach better results. We are open for collaboration with all kinds of art, cultural and project spaces in Europe.
 
 = render 'shared/modals'
 
