--- a/app/views/shared/_artist_how_it_works.html.slim
+++ b/app/views/shared/_artist_how_it_works.html.slim
@@ -22,4 +22,4 @@
             = image_tag "image2C.png", class: "image-intro-hiw image-intro-hiw-c"
             p.step.mt-4 <strong>Back to the studio</strong>
             .text
-              p. Once you are part of the ARTYQUE Family, you will be able to enjoy a stress free creation process while we work our magic and promote your art across Europe.
+              p. Once you are part of the ARTYQUE Family, you will be able to enjoy a stress-free creation process while we work our magic and promote your art across Europe.
