--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -4,7 +4,7 @@
       .col-12
         h4.title.color.c-dark-blue. Artyque Agency
       .title.color.c-dark-blue.text-center.col-12
-        h4.header-text.color.mt-3.c-dark-blue.coachella-black.footer-banner-text. Bringing Artists one step forward.
+        h4.header-text.color.mt-3.c-dark-blue.coachella-black.footer-banner-text. Bringing Artists one step forward
       .row.two-buttons-container.mt-4
         .col-12.col-sm-6
           = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
