--- a/app/views/shared/_main_banner.html.slim
+++ b/app/views/shared/_main_banner.html.slim
@@ -9,7 +9,7 @@
         .col-12
           h4.title.color.c-white. ARTYQUE AGENCY
         .title.color.c-white.text-center.col-12
-          h1.header-text.color.mt-3.c-white.second-font.main-text.coachella-light.Your Your Success is Our Mission.
+          h1.header-text.color.mt-3.c-white.second-font.main-text.coachella-light.Your Your Success is Our Mission
         .row.two-buttons-container.mt-4
           .col-12.col-sm-6
             = link_to "Get in Touch", contact_path, class: "button-primary artist-button"
