--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -9,7 +9,7 @@
         .text-body
           .body-title
             h3.coachella-regular.text-center.mb-5 ARTYQUE for artists
-          p.coachella-light.mb-5 ARTYQUE is a new kind of agency dedicated to the career growth of emerging and mid-career artists across Europe. Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your provenance, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally.
+          p.coachella-light.mb-5 ARTYQUE is an agency dedicated to the career growth of emerging and mid-career artists across Europe. Acting on your behalf and only in your interest, we promote your work and organise your exhibitions across Europe, find fundings for your projects, develop your CV, and ultimately increase the value of your works. Simply put, we are here to support your success, believe in your talent and become your ally.
           .services.mb-5.justify-content-center
             .row
               .col-12.col-md-6.mt-5
@@ -17,20 +17,19 @@
                   h3.coachella-regular.to-corner What we offer
                   br
                   ul
-                    li. Create a strategy for your career growth
-                    li. Help you to participate in curatorial projects
-                    li. Increase the visibility of your art on the international art scene Manage your relations with the press
-                    li. Manage your relations with the press
+                    li A strategy for your career growth
+                    li Participation in curatorial projects
+                    li Public Relations management
+                    li A maintained relationships with international collectors
               .col-12.col-md-6.mt-5
                 .service.get.position-relative.pt-5
                   h3.coachella-regular.to-corner What you get
                   br
                   ul
-                    li. What it means to you:
-                    li. More time to create
-                    li. Less stress about applications and negotiations with exhibition spaces
-                    li. Participation in exhibitions
-                    li. Growing pool of collectors
+                    li More time to create
+                    li Stress-free negotiations with exhibition spaces
+                    li International recognition
+                    li Growing pool of collectors
 
 
         .new-look-banner.secondary-banner
@@ -43,7 +42,7 @@
                 h4.header-text.mt-3.c-dark-blue.coachella-black.footer-banner-text. Your Agent. Your Success.
               .row.two-buttons-container.mt-4
                 .col-12.col-sm-6
-                  = link_to "Apply", "#", class: "button-primary artist-button footer-button"
+                  = link_to "Apply", contact_path, class: "button-primary artist-button footer-button"
 #modal_collectors.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
     .modal-content
@@ -55,7 +54,7 @@
         .text-body
           .body-title
             h3.coachella-regular.text-center.mb-5 ARTYQUE for Collectors
-          p.coachella-light.mb-5 With ARTYQUE, we want to provide you with a new and easy way of building your collection, whether you are an art lover or an experienced collector. We bring to you an innovative way to invest in art, through which you don’t only purchase works that inspire you, but also directly support the rise of your favourite artists and as a result, of your collection’s value. By doing so, you will take part in setting new trends you truly believe in and become a tastemaker in the emerging art world.
+          p.coachella-light.mb-5 With ARTYQUE, we want to provide you with a new and easy way of investing in emerging talents, whether you are an art lover or an experienced collector. Through us, you don’t only purchase works that inspire you, but also directly support the rise of your favourite artists and as a result, of your collection’s value. By doing so, you will take part in setting new trends you truly believe in and become a tastemaker in the emerging art world.
           .services.mb-5.justify-content-center
             .row
               .col-12.col-md-6.mt-5
@@ -63,29 +62,30 @@
                   h3.coachella-regular.to-corner What we offer
                   br
                   ul
-                    li Introduce you to the next generation of promising artists.
-                    li Provide a support team and structure behind each of our artists’ career.
-                    li Increase the visibility of artworks you have collected with Artyque on the international art scene.
+                    li A selection of the most promising artists of this generation
+                    li A team and a structure behind each of our artists’ career
+                    li The opportunity for artworks you have collected with ARTYQUE to be exposed internationally in our future exhibitions
               .col-12.col-md-6.mt-5
                 .service.get.position-relative.pt-5
                   h3.coachella-regular.to-corner What you get
                   br
                   ul
-                    li A safer way to invest in art.
-                    li A stronger provenance for the works you collect with ARTYQUE
-                    li Participation in exhibitions
-                    li The value growth of your collection
+                    li A safe way to invest in emerging artist
+                    li A strong provenance for the works you collect with ARTYQUE
+                    li Works with year on year value growth
+                    li The chance to have a direct influence on the emerging art market
         .new-look-banner.secondary-banner
           .banner-content
             .row
               .col-12
-                h4.title.color.c-dark-blue. Send us your portfolio
-                h4.title.color.c-dark-blue. & artist statement
+                h4.title.color.c-dark-blue. Go beyond collecting
               .title.color.c-dark-blue.text-center.col-12
-                h4.header-text.mt-3.c-dark-blue.coachella-black.footer-banner-text. Your Agent. Your Success.
+                h4.header-text.mt-3.c-dark-blue.coachella-black.footer-banner-text Become a tastemaker
               .row.two-buttons-container.mt-4
                 .col-12.col-sm-6
-                  = link_to "Apply", "#", class: "button-primary artist-button footer-button"
+                  = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
+                .col-12.col-sm-6
+                  = link_to "Available Works", artists_path, class: "button-secondary artist-button footer-button"
 #modal_galleries.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
     .modal-content
@@ -96,7 +96,7 @@
       .modal-body
         .text-body
           .body-title
-            h3.coachella-regular.text-center.mb-5 ARTYQUE for Exhibitions Spaces
+            h3.coachella-regular.text-center.mb-5 ARTYQUE for Collaborations
           p.coachella-light.mb-5 By working with ARTYQUE, you get access to our artists, together with a curatorial service and an International PR support. Our model is based on partnerships, openness and transparency, we are eager to provide our artists with new opportunities such as exhibitions, brand collaborations, public projects, private events and more. 
           .services.mb-5.justify-content-center
             .row
@@ -105,7 +105,7 @@
                   h3.coachella-regular.to-corner What we offer
                   br
                   ul
-                    li Promising artists with a pool of dedicated collectors.
+                    li Promising artists with a pool of dedicated collectors
                     li In-house curator
                     li Logistic discounts
                     li Promotion of the project through our network
@@ -114,10 +114,9 @@
                   h3.coachella-regular.to-corner What you get
                   br
                   ul
-                    li. What it means to you:
-                    li. More time to create
-                    li. Less stress about applications and negotiations with exhibition spaces
-                    li. Participation in exhibitions Growing pool of collectors
+                    li Higher visibility for your space/company/event
+                    li New clients from our networks
+                    li Heightened reputation by welcoming innovative artists into your projects
 
 
         .new-look-banner.secondary-banner
