--- a/app/views/shared/_our_services.html.slim
+++ b/app/views/shared/_our_services.html.slim
@@ -24,8 +24,8 @@
           button type="button" class="btn btn-primary link-0-0" data-toggle="modal" data-target="#modal_galleries"
           .text-title
             p.coachella-regular For
-            p.coachella-regular.to-underline Exhibitions Spaces
-        p.text-left Teaming up doubles success. By working together, we can aim higher and reach better results. We are open for collaboration with all kinds of art, cultural and project spaces in Europe.
+            p.coachella-regular.to-underline Collaborations
+        p.text-left By working together, we can aim higher and reach better results. We are open for collaboration with cultural spaces, foundations and brands across Europe.
 
 = render 'shared/modals'
 
