--- a/app/views/shared/_collector_how_it_works.html.slim
+++ b/app/views/shared/_collector_how_it_works.html.slim
@@ -16,10 +16,10 @@
             = image_tag "imageB.png", class: "image-intro-hiw image-intro-hiw-b"
             p.step.mt-4 <strong>Promote</strong>
             .text
-              p. Make sure the story of your new artwork continues after it gets to you. We propose carefull tailored projects to grow the visibility of your collected works to secure your invesment growth.
+              p. Take control over the provenance of your newly acquired artwork. We propose to keep exposing and give visibility to the works you purchase through us to secure your investment’s value growth.
       .col-12.col-md-6.col-lg-4
         .HIW-card
             = image_tag "imagec.png", class: "image-intro-hiw image-intro-hiw-c"
             p.step.mt-4 <strong>Thrive</strong>
             .text
-              p. instead of simply following trends, set them by supporting our artists and benefit from their growth.
+              p. Instead of simply following trends, set them by supporting our talents and grow as a collector while they grow as artists.
