--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -20,10 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="circle-banner-container circle-left">
-    <%= link_to '', artists_path, class: "fill-link" %>
-    <div class="circle about-circle banner-circle bg-blue c-white rotating">
-      <p class="title"><strong>·</strong>&nbsp;&nbsp; AVAILABLE <strong>·</strong>&nbsp;&nbsp; ARTWORKS
+    <%= render "shared/available_works_circle" %>
     </div>
   </div>
 </div>
