integrated and changed text to vieweing room

--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -85,7 +85,7 @@
                 .col-12.col-sm-6
                   = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
                 .col-12.col-sm-6
-                  = link_to "Available Works", artists_path, class: "button-secondary artist-button footer-button"
+                  = link_to "Viewing Room", artists_path, class: "button-secondary artist-button footer-button"
 #modal_galleries.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
     .modal-content
@@ -97,7 +97,7 @@
         .text-body
           .body-title
             h3.coachella-regular.text-center.mb-5 ARTYQUE for Collaborations
-          p.coachella-light.mb-5 By working with ARTYQUE, you get access to our artists, together with a curatorial service and an International PR support. Our model is based on partnerships, openness and transparency, we are eager to provide our artists with new opportunities such as exhibitions, brand collaborations, public projects, private events and more. 
+          p.coachella-light.mb-5 By working with ARTYQUE, you get access to our artists, together with a curatorial service and an International PR support. Our model is based on partnerships, openness and transparency, we are eager to provide our artists with new opportunities such as exhibitions, brand collaborations, public projects, private events and more.
           .services.mb-5.justify-content-center
             .row
               .col-12.col-md-6.mt-5
@@ -125,9 +125,9 @@
               .col-12
                 h4.title.color.c-dark-blue. Create Synergy
               .title.color.c-dark-blue.text-center.col-12
-                h4.header-text.mt-3.c-dark-blue.coachella-black.footer-banner-text. Let’s succeed together 
+                h4.header-text.mt-3.c-dark-blue.coachella-black.footer-banner-text. Let’s succeed together
               .row.two-buttons-container.mt-4
                 .col-12.col-sm-6
                   = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
                 .col-12.col-sm-6
-                  = link_to "Available Works", artists_path, class: "button-secondary artist-button footer-button"
+                  = link_to "Viewing Room", artists_path, class: "button-secondary artist-button footer-button"
