--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -18,11 +18,11 @@
       .artist-card.col-lg-2.bg-gold.top-artist-button.d-none.d-sm-block
         = link_to '', '#', class: "link-0-0"
         .right
-          p.coachella-regular Available
-          p.coachella-regular.to-underline Works
+          p.coachella-regular ARTYQUE
+          p.coachella-regular.to-underline Viewing Room
     .row.two-buttons-container.mb-4.lg-hide.justify-content-center.d-block.d-sm-none
       .col-12.col-sm-6.center-margin
         = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
       .col-12.col-sm-6.center-margin
-        = link_to "Available Works", artists_path, class: "button-primary artist-button"
+        = link_to "Viewing Room", artists_path, class: "button-primary artist-button"
         / TODO change to shopify
