fix paths to store

--- a/app/views/shared/_available_works_circle.html.erb
+++ b/app/views/shared/_available_works_circle.html.erb
@@ -1,5 +1,5 @@
 <div class="circle-banner-container">
-  <%= link_to '', artists_path, class: "fill-link" %>
+  <%= link_to '', 'https://artyque-shop.myshopify.com', class: "fill-link" %>
   <div class="circle banner-circle bg-blue c-white rotating">
     <p class="title">
         <strong>·</strong>&nbsp;&nbsp; AVAILABLE &nbsp;&nbsp;<strong>·</strong>&nbsp;&nbsp; ARTWORKS &nbsp;&nbsp;
