--- a/app/views/shared/_modals.html.slim
+++ b/app/views/shared/_modals.html.slim
@@ -85,7 +85,7 @@
                 .col-12.col-sm-6
                   = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
                 .col-12.col-sm-6
-                  = link_to "Viewing Room", artists_path, class: "button-secondary artist-button footer-button"
+                  = link_to "Viewing Room", 'https://artyque-shop.myshopify.com', class: "button-secondary artist-button footer-button"
 #modal_galleries.modal.fade[tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"]
   .modal-dialog.modal-dialog-custom[role="document"]
     .modal-content
@@ -130,4 +130,4 @@
                 .col-12.col-sm-6
                   = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
                 .col-12.col-sm-6
-                  = link_to "Viewing Room", artists_path, class: "button-secondary artist-button footer-button"
+                  = link_to "Viewing Room", 'https://artyque-shop.myshopify.com', class: "button-secondary artist-button footer-button"
