--- a/app/views/shared/_footer_banner.html.slim
+++ b/app/views/shared/_footer_banner.html.slim
@@ -9,6 +9,6 @@
         .col-12.col-sm-6
           = link_to "Get in touch", contact_path, class: "button-primary artist-button footer-button"
         .col-12.col-sm-6
-          = link_to "Viewing Room", artists_path, class: "button-secondary artist-button footer-button"
+          = link_to "Viewing Room", 'https://artyque-shop.myshopify.com', class: "button-secondary artist-button footer-button"
           / TODO change to shopify
 
