--- a/app/views/shared/_top_artists.html.slim
+++ b/app/views/shared/_top_artists.html.slim
@@ -24,5 +24,5 @@
       .col-12.col-sm-6.center-margin
         = link_to "Discover More Artists", artists_path, class: "button-primary artist-button"
       .col-12.col-sm-6.center-margin
-        = link_to "Viewing Room", artists_path, class: "button-primary artist-button"
+        = link_to "Viewing Room", 'https://artyque-shop.myshopify.com', class: "button-primary artist-button"
         / TODO change to shopify
