--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -86,6 +86,7 @@
     color: $medium-gray;
     display: flex;
     align-items: center;
+    width: max-content;
     .nav-btn {
       @extend .button-primary;
       min-width: 144px;
